content for Transfer; formatting

--- a/Setup/Containers.ipynb
+++ b/Setup/Containers.ipynb
@@ -24,7 +24,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### List\n",
+    "<hr></hr>\n",
+    "\n",
+    "## List\n",
     "\n",
     "Once the `container` module is loaded, you can see a list of all containers currently inside the API by calling `.list()`."
    ]
@@ -44,7 +46,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Load\n",
     "\n",
     "Labware is loaded with two arguments: **1)** the container type, and **2)** the deck slot it will be placed in on the robot."
    ]
@@ -109,7 +113,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Create\n",
     "\n",
     "In addition to the default containers that come with the Opentrons API, you can create your own custom containers.\n",
     "\n",
