--- a/Setup/Jupyter and API.ipynb
+++ b/Setup/Jupyter and API.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Using Jupyter\n",
     "\n",
-    "### Running Code\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Running Code\n",
     "\n",
     "Jupyter Notebooks are built up of cells, and a cell is the boxes that hold Python code.\n",
     "\n",
@@ -32,7 +34,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Handling Errors\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Handling Errors\n",
     "\n",
     "When writing Python, you will encounter errors in your code.\n",
     "\n",
@@ -87,7 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Install Opentrons API\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Install Opentrons API\n",
     "\n",
     "Try running the below cell, which will attemp to load the Opentrons API into the Jupyter Kernel:"
    ]
@@ -165,7 +171,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -179,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
