--- a/Setup/Pipettes.ipynb
+++ b/Setup/Pipettes.ipynb
@@ -24,7 +24,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Axis and Max Volume\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Axis and Max Volume\n",
     "\n",
     "To create a `Pipette`, you must give it an `axis` and a `max_volume`. The axis can be either `'a'` or `'b'`, and the volume is whatever your hand pipette is calibrated for. In this example, we are using a 200uL pipette."
    ]
@@ -47,7 +49,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Minimum Volume\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Minimum Volume\n",
     "\n",
     "The minimum allowed volume can be set for each pipette. If your protocol attempts to aspirate or dispense a volume below this volume, the API will give you a warning."
    ]
@@ -71,7 +75,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Channels\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Channels\n",
     "\n",
     "Pipettes can also be assigned a number of channels, either `channel=1` or `channel=8`. If you do not specify, it will default to `channel=1` channel."
    ]
@@ -96,7 +102,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plunger Speeds\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Plunger Speeds\n",
     "The speeds at which the pipette will aspirate and dispense can be set through `aspirate_speed` and `dispense_speed`. The values are in millimeters/minute, and default to `aspirate_speed=300` and `dispense_speed=500`.\n",
     "\n",
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
