--- a/Setup/Robot.ipynb
+++ b/Setup/Robot.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -29,30 +29,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Containers\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Containers\n",
     "\n",
     "When containers are loaded, they are automatically added to the `robot`. You can see all currently held containers by calling `robot.containers()`, which returns a [Python dictionary](https://docs.python.org/3.5/tutorial/datastructures.html#dictionaries)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'96-flat': <Deck>/<Slot B1>/<Container 96-flat>,\n",
-       " 'tiprack-200ul': <Deck>/<Slot A1>/<Container tiprack-200ul>}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "robot.containers()"
    ]
@@ -61,29 +51,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get Instruments\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Get Instruments\n",
     "\n",
     "When instruments are created, they are automatically added to the `robot`. You can see all currently held instruments by calling `robot.get_instruments()`, which returns a [Python list](https://docs.python.org/3.5/tutorial/datastructures.html#more-on-lists)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('B', <opentrons.instruments.pipette.Pipette at 0x110901e10>)]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "robot.get_instruments()"
    ]
@@ -92,29 +73,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Commands\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Commands\n",
     "\n",
     "When commands are called on a pipette, they are automatically enqueued to the `robot` in the order they are called. You can see all currently held commands by calling `robot.commands()`, which returns a [Python list](https://docs.python.org/3.5/tutorial/datastructures.html#more-on-lists)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Picking up tip from <Deck>/<Slot A1>/<Container tiprack-200ul>/<Well A1>\n",
-      "Drop_tip at <Deck>/<Slot A1>/<Container tiprack-200ul>/<Well A1>\n",
-      "Picking up tip from <Deck>/<Slot A1>/<Container tiprack-200ul>/<Well A1>\n",
-      "Drop_tip at <Deck>/<Slot A1>/<Container tiprack-200ul>/<Well A1>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pipette.pick_up_tip(tiprack.wells('A1'))\n",
     "pipette.drop_tip(tiprack.wells('A1'))\n",
@@ -133,27 +105,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Clear Commands\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Clear Commands\n",
     "\n",
     "Once commands are enqueued to the robot, we can erase those commands by calling `robot.clear_commands()`. Any previously created instruments and containers will still be inside `robot`, but all commands are erased."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There is 1 command\n",
-      "There are now 0 commands\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "robot.clear_commands()\n",
     "pipette.pick_up_tip(tiprack['A1'])\n",
@@ -167,29 +132,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comment\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Comment\n",
     "\n",
     "You can add a custom message to the list of command descriptions you see when running `robot.commands()`. This command is `robot.comment()`, and it allows you to print out any information you want at the point in your protocol"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Picking up tip from <Deck>/<Slot A1>/<Container tiprack-200ul>/<Well A1>\n",
-      "Just picked up tip A1\n",
-      "Picking up tip from <Deck>/<Slot A1>/<Container tiprack-200ul>/<Well A1>\n",
-      "Just dropped tip A1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "robot.clear_commands()\n",
     "\n",
@@ -207,26 +163,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Simulate\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Simulate\n",
     "\n",
     "Once commands have been enqueued to the `robot`, we can simulate their execution by calling `robot.simulate()`. This helps us debug our protocol, and to see if the robots gives us any warnings."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pick_up_tip called with no reference to a tip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pipette.pick_up_tip()\n",
     "\n",
@@ -245,43 +195,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reset\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Reset\n",
     "\n",
     "Calling `robot.reset()` will remove everything from the robot. Any previously added containers, pipettes, or commands will be erased."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{}\n",
-      "[]\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "robot.reset()\n",
     "print(robot.containers())\n",
     "print(robot.get_instruments())\n",
     "print(robot.commands())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
