--- a/commands/Accessing Wells.ipynb
+++ b/commands/Accessing Wells.ipynb
@@ -28,7 +28,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Individual Wells\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Individual Wells\n",
     "\n",
     "Once a container is loaded into your protocol, you can easily access the many wells within it using `.wells()` method. `.wells()` takes the name of the well as an argument, and will return the well at that location."
    ]
@@ -101,7 +103,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Columns and Rows\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Columns and Rows\n",
     "\n",
     "A container's wells are organized within a series of columns and rows, which are also labelled on standard labware. In the API, columns are given letter names (`'A'` through `'H'` for example) and go left to right, while rows are given numbered names (`'1'` through `'8'` for example) and go from front to back.\n",
     "\n",
