--- a/commands/Liquid Control.ipynb
+++ b/commands/Liquid Control.ipynb
@@ -29,7 +29,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aspirate\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Aspirate\n",
     "\n",
     "To aspirate is to pull liquid up into the pipette's tip. When calling aspirate on a pipette, we can specify how many micoliters, and at which location, to draw liquid from:"
    ]
@@ -62,7 +64,7 @@
    },
    "outputs": [],
    "source": [
-    "pipette.aspirate(50)               # aspirate 50uL from current position"
+    "pipette.aspirate(50)                     # aspirate 50uL from current position"
    ]
   },
   {
@@ -89,7 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dispense\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Dispense\n",
     "\n",
     "To dispense is to push out liquid from the pipette's tip. It's usage in the Opentrons API is nearly identical to `aspirate()`, in that you can specify microliters and location, only microliters, or only a location:"
    ]
@@ -102,9 +106,9 @@
    },
    "outputs": [],
    "source": [
-    "pipette.dispense(50, plate.wells('B1'))  # dispense 50uL to plate:B1\n",
-    "pipette.dispense(50)               # dispense 50uL to current position\n",
-    "pipette.dispense(plate.wells('B2'))      # dispense until pipette empties to plate:B2"
+    "pipette.dispense(50, plate.wells('B1')) # dispense 50uL to plate:B1\n",
+    "pipette.dispense(50)                    # dispense 50uL to current position\n",
+    "pipette.dispense(plate.wells('B2'))     # dispense until pipette empties to plate:B2"
    ]
   },
   {
@@ -118,7 +122,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Blow Out\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Blow Out\n",
     "\n",
     "To blow out is to push an extra amount of air through the pipette's tip, so as to make sure that any remaining droplets are expelled.\n",
     "\n",
@@ -133,15 +139,17 @@
    },
    "outputs": [],
    "source": [
-    "pipette.blow_out()                 # blow out over current location\n",
-    "pipette.blow_out(plate.wells('B3'))      # blow out over current plate:B3"
+    "pipette.blow_out()                  # blow out over current location\n",
+    "pipette.blow_out(plate.wells('B3')) # blow out over current plate:B3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Touch Tip\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Touch Tip\n",
     "\n",
     "To touch tip is to move the pipette's currently attached tip to the edges of a well, for the purpose of knocking off any droplets that might be hanging from the tip.\n",
     "\n",
@@ -158,16 +166,18 @@
    },
    "outputs": [],
    "source": [
-    "pipette.touch_tip()                # touch tip within current location\n",
-    "pipette.touch_tip(-2)              # touch tip 2mm below the top of the current location\n",
-    "pipette.touch_tip(plate.wells('B1'))     # touch tip within plate:B1"
+    "pipette.touch_tip()                  # touch tip within current location\n",
+    "pipette.touch_tip(-2)                # touch tip 2mm below the top of the current location\n",
+    "pipette.touch_tip(plate.wells('B1')) # touch tip within plate:B1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Mix\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Mix\n",
     "\n",
     "Mixing is simply performing a series of `aspirate()` and `dispense()` commands in a row on a single location. However, instead of having to write those commands out every time, the Opentrons API allows you to simply say `mix()`.\n",
     "\n",
@@ -196,7 +206,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Air Gap\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Air Gap\n",
     "\n",
     "Some liquids need an extra amount of air in the pipette's tip to prevent it from sliding out. A call to `.air_gap()` with a microliter amount will aspirate that much air into the tip."
    ]
