--- a/commands/Moving.ipynb
+++ b/commands/Moving.ipynb
@@ -32,7 +32,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Head Speed\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Head Speed\n",
     "\n",
     "The maximum speed of the robot's head can be set using `robot.head_speed()`. The value we set the speed to is in millimeters-per-second (mm/sec)."
    ]
@@ -62,7 +64,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Move To\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Move To\n",
     "\n",
     "Pipette's are able to `move_to()` any location on the deck. Any call to `move_to()` will be enqueued, meaning that it will not execute until calling `robot.run()`.\n",
     "\n",
@@ -149,7 +153,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Delay\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Delay\n",
     "\n",
     "To have your protocol pause for any given number of minutes or seconds, simply call `delay()` on your pipette. The value passed into `delay()` is the number of minutes or seconds the robot will wait until moving on to the next commands"
    ]
@@ -171,7 +177,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Homing\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Homing\n",
     "\n",
     "You can enqueue a `home()` command to your protocol, by giving it the `enqueue=True` option. Without passing the `enqueue` option, the home command will run immediately."
    ]
