--- a/commands/Tips Iterating.ipynb
+++ b/commands/Tips Iterating.ipynb
@@ -29,7 +29,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Attaching Containers to a Pipette\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Attaching Containers to a Pipette\n",
     "\n",
     "Tip racks and trash containers can be \"attached\" to a pipette when the pipette is created. This give the pipette the ability to automatically iterate through tips, and to automatically send the tip to the trash container.\n",
     "\n",
@@ -68,7 +70,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Iterating Through Tips\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Iterating Through Tips\n",
     "\n",
     "Now that we have two tip racks attached to the pipette, we can automatically step through each tip whenever we call `pick_up_tip()`. We then have the option to either `return_tip()` to the tip rack, or we can `drop_tip()` to remove the tip in the attached trash container."
    ]
@@ -119,7 +123,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Select Starting Tip\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Select Starting Tip\n",
     "\n",
     "Calls to `pick_up_tip()` will by default start at the attached tip rack's `A1` location. If you however want to start automatic tip iterating at a different tip, you can use `start_at_tip()`."
    ]
@@ -143,7 +149,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get Current Tip's Origin\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Get Current Tip's Origin\n",
     "\n",
     "Get the source location of the pipette's current tip by calling `.current_tip()`. If the tip was from the `'A1'` position on our tip rack, `.current_tip()` will return that position."
    ]
