--- a/commands/Tips.ipynb
+++ b/commands/Tips.ipynb
@@ -30,7 +30,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pick Up Tip\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Pick Up Tip\n",
     "\n",
     "Before any liquid handling can be done, your pipette must have a tip on it. The command `pick_up_tip()` will move the pipette over to the specified tip, the press down into it to create a vacuum seal. The below example picks up the tip at location `A1`."
    ]
@@ -50,7 +52,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Drop Tip\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Drop Tip\n",
     "\n",
     "Once finished with a tip, the pipette will autonomously remove the tip when we call `drop_tip()`. We can specify where to drop the tip by passing in a location. The below example drops the tip back at its originating location on the tip rack."
    ]
@@ -89,7 +93,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Return Tip\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Return Tip\n",
     "\n",
     "When we need to return the tip to its originating location on the tip rack, we can simply call `return_tip()`. The example below will automatically return the tip to `A3` on the tip rack."
    ]
