--- a/macro_commands/Transfer.ipynb
+++ b/macro_commands/Transfer.ipynb
@@ -34,9 +34,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### One to One\n",
+    "<hr></hr>\n",
     "\n",
-    "The most basic usage of is to transfer a certain volume (uL) from a source well to a destination well."
+    "## One to One\n",
+    "\n",
+    "The most basic usage is to transfer one volume of liquid from a source well to a destination well. The example below does this, and then prints out all the command created."
    ]
   },
   {
@@ -82,13 +84,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Many to Many\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Many to Many\n",
     "\n",
     "The `.transfer()` command can also be used to move liquid between groups of wells, by using lists of wells as your `source` and `destination`.\n",
     "\n",
     "<div class=\"alert alert-warning\" role=\"alert\" style=\"margin: 10px\">\n",
     "<p><strong>NOTE</strong></p>\n",
-    "<p>When transferring liquids between lists of well, the lists musts be of the same length. The <code>.transfer()</code> command will now know what to do if there are different amounts of source and destination wells.</p>\n",
+    "<p>When transferring liquids between lists of wells, the lists musts be of the same length. You can not ask the <code>.transfer()</code> command to transfer from 2 wells to 3 wells (for example), because it has no idea what you are expecting of it.</p>\n",
     "</div>"
    ]
   },
@@ -112,7 +116,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The volumes can also be a list of numbers (with same length and sources/destinations)."
+    "#### List of Volumes\n",
+    "\n",
+    "The volumes can also be a list of different volumes, so that each destination well gets a different volume. This list of volumes must also be the same length as the source/destination lists."
    ]
   },
   {
@@ -136,29 +142,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Handling Tips"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "pipette.transfer(50, plate.rows('2'), plate.rows('3'), new_tips='once')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "pipette.transfer(50, plate.rows('2'), plate.rows('3'), new_tips='never')"
+    "<hr></hr>\n",
+    "\n",
+    "## Handling Tips\n",
+    "\n",
+    "If you read the command printed above, you will notice the `.transfer()` command picks up a tip once at the beginning, and the drops that tip when finished. This is the default behavior, but can be adjusted by setting the `new_tips=` argument.\n",
+    "\n",
+    "#### `new_tips='once'`\n",
+    "\n",
+    "This first example transfers from for `'2'` to row `'3'`, and we've specifed to get a new tip `'once'` (this is the default behavior so there is no need to set this every time)."
    ]
   },
   {
@@ -169,25 +161,198 @@
    },
    "outputs": [],
    "source": [
-    "pipette.transfer(50, plate.rows('2'), plate.rows('3'), new_tips='every')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pipette.transfer(50, plate.rows('2'), plate.rows('3'), trash=False)"
+    "robot.clear_commands()\n",
+    "pipette.transfer(50, plate.wells('A1', 'A2'), plate.wells('B1', 'B1'), new_tip='once')  # default behavior\n",
+    "for c in robot.commands():\n",
+    "    print(c)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Other Options"
+    "#### `new_tips='never'`\n",
+    "\n",
+    "Transfer commands can also be told to never pick up or drop a tip, by setting `new_tip='never'`. This is useful if you are using the same tip for a previous or future commands."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "robot.clear_commands()\n",
+    "\n",
+    "pipette.transfer(50, plate.wells('A1', 'A2'), plate.wells('B1', 'B1'), new_tip='never')\n",
+    "\n",
+    "for c in robot.commands():\n",
+    "    print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `new_tips='always'`\n",
+    "\n",
+    "The transfer command can be told to pick up a new tip every time it finishes a dispense, by setting `new_tip='always'`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "robot.clear_commands()\n",
+    "\n",
+    "pipette.transfer(50, plate.wells('A1', 'A2'), plate.wells('B1', 'B1'), new_tip='always')\n",
+    "\n",
+    "for c in robot.commands():\n",
+    "    print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `trash`\n",
+    "\n",
+    "By default, the transfer command will drop the pipette's tips in the trash container. However, if you wish to instead return the tip to it's tip rack, you can set `trash-False`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "robot.clear_commands()\n",
+    "\n",
+    "pipette.transfer(50, plate.wells('A1', 'A2'), plate.wells('B1', 'B1'), trash=False)\n",
+    "\n",
+    "for c in robot.commands():\n",
+    "    print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other Options\n",
+    "\n",
+    "There are other options for customizing your transfer command:\n",
+    "\n",
+    "#### `touch_tip`\n",
+    "\n",
+    "A touch-tip can be performed after every aspirate and dispense by setting `touch_tip=True`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "robot.clear_commands()\n",
+    "\n",
+    "pipette.transfer(100, plate.wells('A1'), plate.wells('A2'), touch_tip=True)\n",
+    "\n",
+    "for c in robot.commands():\n",
+    "    print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `blow_out`\n",
+    "\n",
+    "A blow-out can be performed after every dispense that leaves the tip empty by setting `blow_out=True`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "robot.clear_commands()\n",
+    "\n",
+    "pipette.transfer(100, plate.wells('A1'), plate.wells('A2'), blow_out=True)\n",
+    "\n",
+    "for c in robot.commands():\n",
+    "    print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `mix_before`\n",
+    "\n",
+    "A mix can be performed before every aspirate by setting `mix_before=()`. The value of `mix_before=` must be a tuple, the *1st* value is the number of repetitions, the *2nd* value is the amount of liquid to mix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "robot.clear_commands()\n",
+    "\n",
+    "pipette.transfer(100, plate.wells('A1'), plate.wells('A2'), mix_before=(2, 50))\n",
+    "\n",
+    "for c in robot.commands():\n",
+    "    print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `mix_after`\n",
+    "\n",
+    "A mix can be performed after every dispense by setting `mix_after=()`. The value of `mix_after=` must be a tuple, the *1st* value is the number of repetitions, the *2nd* value is the amount of liquid to mix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "robot.clear_commands()\n",
+    "\n",
+    "pipette.transfer(100, plate.wells('A1'), plate.wells('A2'), mix_after=(2, 50))\n",
+    "\n",
+    "for c in robot.commands():\n",
+    "    print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `air_gap`\n",
+    "\n",
+    "An air gap can be performed after every aspirate by setting `air_gap=int`, where the value is the volume of air in microliters to aspirate after aspirating the liquid."
    ]
   },
   {
@@ -198,51 +363,12 @@
    },
    "outputs": [],
    "source": [
-    "pipette.transfer(100, plate.rows('1'), plate.rows('2'), touch_tip=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "pipette.transfer(100, plate.rows('1'), plate.rows('2'), blow_out=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "pipette.transfer(100, plate.rows('1'), plate.rows('2'), mix_before=(2, 50))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "pipette.transfer(100, plate.rows('1'), plate.rows('2'), mix_after=(2, 50))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "pipette.transfer(100, plate.rows('1'), plate.rows('2'), air_gap=20)"
+    "robot.clear_commands()\n",
+    "\n",
+    "pipette.transfer(100, plate.wells('A1'), plate.wells('A2'), air_gap=20)\n",
+    "\n",
+    "for c in robot.commands():\n",
+    "    print(c)"
    ]
   }
  ],
