--- a/commands/Accessing Multiple Wells.ipynb
+++ b/commands/Accessing Multiple Wells.ipynb
@@ -30,7 +30,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Wells\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Wells\n",
     "\n",
     "The `.wells()` method can return a single well, or it can return a list of wells when multiple arguments are passed.\n",
     "\n",
@@ -53,7 +55,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Wells To\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Wells To\n",
     "\n",
     "Instead of having to list the name of every well, we can also create a range of wells with a start and end point. The first argument is the starting well, and the `to=` argument is the last well."
    ]
@@ -113,7 +117,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Wells Length\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Wells Length\n",
     "\n",
     "Another way you can create a list of wells is by specifying the `length=` of the well list you need, in addition to the starting point. The example below will return eight wells, starting at well `'A1'`:"
    ]
@@ -172,7 +178,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Columns and Rows\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Columns and Rows\n",
     "\n",
     "The same arguments described above can be used with `.rows()` and `.cols()` to create lists of rows or columns."
    ]
@@ -205,7 +213,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Slices\n",
+    "<hr></hr>\n",
+    "\n",
+    "## Slices\n",
     "\n",
     "Containers can also be treating similarly to Python lists, and can therefore handle slices."
    ]
