updates wells title

--- a/commands/Accessing Wells.ipynb
+++ b/commands/Accessing Wells.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Access Individual Wells\n",
+    "# Access Wells\n",
     "\n",
     "When writing a protocol using the API, you will be spending most of your time selecting which wells to transfer liquids to and from.\n",
     "\n",
