adds comment to required imports and variables

--- a/commands/Liquid Control.ipynb
+++ b/commands/Liquid Control.ipynb
@@ -19,6 +19,10 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "THIS NOTEBOOK REQUIRES THE FOLLOWING IMPORTS AND VARIABLES\n",
+    "PLEASE RUN THIS CELL BEFORE CONTINUING WITH THE TUTORIAL\n",
+    "'''\n",
     "from opentrons import containers, instruments\n",
     "\n",
     "plate = containers.load('96-flat', 'B1')\n",
