--- a/commands/Accessing Multiple Wells.ipynb
+++ b/commands/Accessing Multiple Wells.ipynb
@@ -21,6 +21,10 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "THIS NOTEBOOK REQUIRES THE FOLLOWING IMPORTS AND VARIABLES\n",
+    "PLEASE RUN THIS CELL BEFORE CONTINUING WITH THE TUTORIAL\n",
+    "'''\n",
     "from opentrons import containers\n",
     "\n",
     "plate = containers.load('96-flat', 'B1')"
