--- a/commands/Accessing Wells.ipynb
+++ b/commands/Accessing Wells.ipynb
@@ -13,12 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "THIS NOTEBOOK REQUIRES THE FOLLOWING IMPORTS AND VARIABLES\n",
+    "PLEASE RUN THIS CELL BEFORE CONTINUING WITH THE TUTORIAL\n",
+    "'''\n",
     "from opentrons import containers\n",
     "\n",
     "plate = containers.load('96-flat', 'A1')"
