--- a/commands/Moving.ipynb
+++ b/commands/Moving.ipynb
@@ -20,6 +20,10 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "THIS NOTEBOOK REQUIRES THE FOLLOWING IMPORTS AND VARIABLES\n",
+    "PLEASE RUN THIS CELL BEFORE CONTINUING WITH THE TUTORIAL\n",
+    "'''\n",
     "from opentrons import robot, containers, instruments\n",
     "\n",
     "tiprack = containers.load('tiprack-200ul', 'A1')\n",
