--- a/commands/Tips.ipynb
+++ b/commands/Tips.ipynb
@@ -18,6 +18,10 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "THIS NOTEBOOK REQUIRES THE FOLLOWING IMPORTS AND VARIABLES\n",
+    "PLEASE RUN THIS CELL BEFORE CONTINUING WITH THE TUTORIAL\n",
+    "'''\n",
     "from opentrons import containers, instruments\n",
     "\n",
     "trash = containers.load('point', 'D2')\n",
