--- a/setup/Containers.ipynb
+++ b/setup/Containers.ipynb
@@ -11,12 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "THIS NOTEBOOK REQUIRES THE FOLLOWING IMPORTS AND VARIABLES\n",
+    "PLEASE RUN THIS CELL BEFORE CONTINUING WITH THE TUTORIAL\n",
+    "'''\n",
     "from opentrons import containers"
    ]
   },
