--- a/setup/Pipettes.ipynb
+++ b/setup/Pipettes.ipynb
@@ -17,6 +17,10 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
+    "THIS NOTEBOOK REQUIRES THE FOLLOWING IMPORTS AND VARIABLES\n",
+    "PLEASE RUN THIS CELL BEFORE CONTINUING WITH THE TUTORIAL\n",
+    "'''\n",
     "from opentrons import instruments"
    ]
   },
